# 6_DOF_Robot_Arm

./: IK.py  README.md  package.xml  peter_cork_verification.mlx  transformation_matrix.py  workspace.py
CAD files/: base.part  config.json  link1.part  link1.stl  link2.part  link3.part  link4.part  link4.stl  link5.part  link5.stl  link6.part  part_1.part  robot.urdf
chitlits_trial/: CMakeLists.txt
chitlits_trial/src/: IK.py  dummy.py  gui.py
chitlits_trial/urdf/: chitlits_trial.urdf  chitlits_trial_integration.urdf.xacro
config/: controllers.yaml
launch/: chitlits_trial.launch  display.launch  gazebo.launch
meshes/: base.stl  link2.stl  link3.stl  link6.stl
src/: IK.py  custom_publisher.py
urdf/: chitlits_trial.urdf
